--- a/package.json
+++ b/package.json
@@ -13,59 +13,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~7.1.4",
-    "@angular/core": "~7.1.4",
-    "@angular/forms": "~7.1.4",
-    "@angular/http": "~7.1.4",
-    "@angular/platform-browser": "~7.1.4",
-    "@angular/platform-browser-dynamic": "~7.1.4",
-    "@angular/router": "~7.1.4",
-    "@ionic-native/camera": "^5.0.0-beta.23",
+    "@angular/common": "8.1.1",
+    "@angular/core": "8.1.1",
+    "@angular/forms": "8.1.1",
+    "@angular/platform-browser": "8.1.1",
+    "@angular/platform-browser-dynamic": "8.1.1",
+    "@angular/pwa": "~0.801.1",
+    "@angular/router": "8.1.1",
+    "@angular/service-worker": "~8.1.1",
+    "@ionic-native/camera": "^5.12.0",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-rc.2",
+    "@ionic/angular": "^4.7.4",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
-    "cordova-android": "7.1.4",
-    "cordova-ios": "4.5.5",
+    "cordova-android": "8.0.0",
+    "cordova-ios": "^5.0.1",
     "cordova-plugin-camera": "~4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-whitelist": "^1.3.2",
     "cordova-sqlite-storage": "^2.6.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "core-js": "^2.5.7",
+    "rxjs": "6.5.2",
+    "sw-toolbox": "3.6.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.11.4",
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular-devkit/core": "~7.1.4",
-    "@angular-devkit/schematics": "~7.1.4",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.4",
-    "@angular/language-service": "~7.1.4",
-    "@ionic/angular-toolkit": "~1.2.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
+    "@angular-devkit/architect": "^0.801.1",
+    "@angular-devkit/build-angular": "^0.801.2",
+    "@angular-devkit/core": "^8.1.1",
+    "@angular-devkit/schematics": "^8.1.1",
+    "@angular/cli": "^8.1.1",
+    "@angular/compiler": "8.1.1",
+    "@angular/compiler-cli": "8.1.1",
+    "@angular/language-service": "~8.1.1",
+    "@ionic/angular-toolkit": "^2.0.0",
+    "@ionic/lab": "^2.0.2",
+    "@types/jasmine": "3.3.15",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "12.0.8",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.2",
+    "protractor": "5.4.2",
+    "puppeteer": "1.17.0",
+    "ts-node": "8.2.0",
+    "tslint": "^5.17.0",
+    "typescript": "~3.4.5"
   },
   "description": "An Ionic project",
   "cordova": {
