Se agregan nuevos modulos para compatibilizar una structura estandar

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-   //"types": []
+    "types": [],
+    "paths": {
+      "@app/*": ["./app/*"],
+      "@env/*": ["./environments/*"]
+    }    
   },
   "exclude": [
     "test.ts",
