--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "npm run env -s && ng e2e",
+    "translations:extract": "ngx-translate-extract --input ./src --output ./src/translations/template.json --format=json --clean --sort --marker extract",
+    "env": "ngx-scripts env npm_package_version",
+    "cordova:prepare": "ngx-scripts cordova prepare",
+    "cordova:run": "ngx-scripts cordova run",
+    "cordova:build": "ngx-scripts cordova build --device --release --copy dist",
+    "cordova:clean": "ngx-scripts clean",
+    "cordova": "cordova",
+    "generate": "ng generate"
   },
   "private": true,
   "dependencies": {
@@ -22,13 +30,16 @@
     "@angular/router": "8.1.1",
     "@angular/service-worker": "~8.1.1",
     "@ionic-native/camera": "^5.12.0",
-    "@ionic-native/core": "5.0.0-beta.21",
-    "@ionic-native/splash-screen": "5.0.0-beta.21",
-    "@ionic-native/status-bar": "5.0.0-beta.21",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/keyboard": "^5.0.0",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.4",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
+    "@ngx-translate/core": "^11.0.1",
     "cordova-android": "8.0.0",
+    "cordova-custom-config": "^5.0.2",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-camera": "~4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -40,12 +51,15 @@
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-sqlite-storage": "^2.6.0",
     "core-js": "^2.5.7",
+    "moment": "^2.24.0",
+    "ramda": "^0.26.1",
     "rxjs": "6.5.2",
     "sw-toolbox": "3.6.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "cordova": "^9.0.0",
     "@angular-devkit/architect": "^0.801.1",
     "@angular-devkit/build-angular": "^0.801.2",
     "@angular-devkit/core": "^8.1.1",
@@ -54,6 +68,9 @@
     "@angular/compiler": "8.1.1",
     "@angular/compiler-cli": "8.1.1",
     "@angular/language-service": "~8.1.1",
+    "@angularclass/hmr": "^2.1.3",
+    "@biesbjerg/ngx-translate-extract": "^2.3.4",
+    "@ngx-rocket/scripts": "^4.0.0",
     "@ionic/angular-toolkit": "^2.0.0",
     "@ionic/lab": "^2.0.2",
     "@types/jasmine": "3.3.15",
